--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint:md": "node scripts/check-frontmatter.mjs"
   },
   "devDependencies": {
-    "vitepress": "^1.6.3",
+    "@types/node": "^24.0.0",
+    "markdown-it-mathjax3": "^4.3.2",
     "tsx": "^4.19.2",
-    "@types/node": "^24.0.0"
+    "vitepress": "^1.6.3"
   }
 }
